[tool.poetry]
name = "pytools"
version = "0.1.0"
description = "Python tools to support website development"
authors = ["Apache Pulsar Contributors <dev@pulsar.apache.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "**/*.py",  from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
