# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[tool.poetry]
name = "pytools"
version = "0.1.0"
description = "Python tools to support Pulsar document/website development"
authors = ["Apache Pulsar Contributors <dev@pulsar.apache.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "**/*.py", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.12"
semver = "^2.13.0"
requests = "^2.32.4"
pydoctor = "^22.9.1"
pdoc = "^14.5.1"
docker = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
